# ergal

./: .gitignore  .travis.yml  LICENSE  README.md  ergal.db  ergal_test.db  pyproject.toml  setup.py
docs/: profile.md  utils.md
ergal/: __init__.py  api.py  cli.py  profile.py  serve.py  utils.py
ergal/gui/: __main__.py  app.py
ergal/gui/static/css/: main.css
ergal/gui/templates/: base.html  edit.html  index.html  profile.html  profiles.html  view.html
src/ergal/: cli.py  exceptions.py  main.py  profile.py  utils.py
src/ergal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ergal.py  test_profile.py  test_utils.py
