[tool.poetry]
name = "ergal"
version = "0.1.6"
description = "The Elegant and Readable General API Library"
readme = "README.md"
authors = ["Elliott Maguire <etgmag@comcast.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20"
xmltodict = "^0.11.0"
colorama = "^0.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.1"
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
