[tool.poetry]
name = "ergal"
version = "1.0.0"
description = "The Elegant and Readable General API Library"
readme = "README.md"
license = "MIT"

authors = ["Elliott Maguire <me@elliott-m.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20"
xmltodict = "^0.11.0"

[tool.poetry.dev-dependencies]
pylint = "^2.1"
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
