[tool.poetry]
name = "ergal"
version = "1.0.2"
description = "The Elegant and Readable General API Library"
authors = ["Elliott Maguire <me@elliott-m.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
